<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_Interfaces" Id="{2e5a4f17-f931-4d18-82f0-7ef7affc96fb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^E15 (EL6692)^IO Outputs^PC2L1_PIP_01_rPress'}
	PC2L1_PIP_01_Interface_rPress AT%Q*: REAL;
	{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^E15 (EL6692)^IO Outputs^PC2L1_PIP_01_AT_VAC'}
	PC2L1_PIP_01_Interface_xAT_VAC AT%Q*: BOOL;
	{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^E15 (EL6692)^IO Outputs^PC2L1_PIP_01_PRESS_OK'}
	PC2L1_PIP_01_Interface_xPRESS_OK AT%Q*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>